// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test for drop zone view Should view drop zone with img 1`] = `
<DocumentFragment>
  <form>
    <div
      class="drop-zone "
    >
      <img
        alt="image"
        src="data:image/png;base64,KOKMkOKWoV/ilqEp"
      />
      <input
        name="avatar"
        type="file"
      />
    </div>
  </form>
</DocumentFragment>
`;

exports[`Test for drop zone view Should view focused drop zone 1`] = `
<DocumentFragment>
  <form>
    <div
      class="drop-zone drop-zone_focus"
    >
      <img
        alt="empty"
        class="empty"
        src="picture.svg"
      />
      <input
        name="avatar"
        type="file"
      />
    </div>
  </form>
</DocumentFragment>
`;

exports[`Test for drop zone view Should view unfocused drop zone 1`] = `
<DocumentFragment>
  <form>
    <div
      class="drop-zone "
    >
      <img
        alt="empty"
        class="empty"
        src="picture.svg"
      />
      <input
        name="avatar"
        type="file"
      />
    </div>
  </form>
</DocumentFragment>
`;
